[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sartor"
version = "1.0.8"
description = "Local-first résumé + cover-letter tailor for one specific job at a time. Powered by the Claude API; your data stays on your machine."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "amodal1" }]
keywords = ["resume", "resume-tailor", "cover-letter", "ats", "claude", "anthropic", "llm", "career", "job-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
    "Framework :: Flask",
]
dependencies = [
    "flask>=3.0,<4.0",
    "anthropic>=0.40,<1.0",
    "python-docx>=1.1,<2.0",
    "pdfplumber>=0.11,<1.0",
    "markdown>=3.6,<4.0",
    "beautifulsoup4>=4.12,<5.0",
    "requests>=2.31,<3.0",
    "pydantic>=2.0,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    # β.3 — Playwright drives headless Chromium for PDF output only. (The
    # in-browser live preview shares the same HTML/CSS template but renders
    # browser-side via paged.js — it does NOT use Chromium; see SECURITY.md
    # "Bundled third-party assets".) PDF output requires a one-time Chromium
    # binary download:
    #   python -m playwright install chromium
    # The browser binary is ~150MB and lives in the OS user cache
    # (%LOCALAPPDATA%\ms-playwright on Windows, ~/.cache on Linux,
    # ~/Library/Caches on macOS), NOT inside the repo.
    "playwright>=1.40,<2.0",
    # Sprint 7.6 — the S3 vector tier (semantic retrieval for the doc-grounded
    # assistant). model2vec is a STATIC-embedding model: numpy + tokenizers +
    # safetensors, NO torch / onnxruntime — the lightest semantic path. numpy is
    # also imported directly by `recall/sources/vector_source.py` for the
    # brute-force cosine + the `.npy` sidecar. The embedding model (~30MB) downloads
    # ONCE via `python -m scripts.build_vector_index` into a gitignored local
    # sidecar (db/vector_index/); runtime retrieval is fully local (no network).
    # Both are hard deps (owner decision 2026-06-16); model2vec stays out of
    # `recall/` (wired only in blueprints/ + scripts/) so the substrate stays
    # extractable + embedder-agnostic. Added ahead of the formal v1.0.8 eval gate at
    # owner direction (Stage-1 lexical retrieval tested too literal) — see CHANGELOG
    # + RELEASE_ARC §4.7.
    "numpy>=1.24,<3.0",
    "model2vec>=0.3,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-socket>=0.7,<1.0",  # PX-08 / G-2 network-egress falsifiability gate
    # Ruff is EXACT-pinned (not a range) so local and CI format identically: ruff does not
    # guarantee formatter-output stability even across patch releases, so a range let 5 files
    # silently drift under a newer formatter (carry-forward ledger, cleared on
    # `chore/ruff-format-pin`). The exact pin is what makes the whole-tree `ruff format --check`
    # gate (ci.yml `quality` job + the ruff-changed commit hook) deterministic — pin + gate are
    # one inseparable fix. Bumping ruff is a deliberate one-commit action: upgrade + `ruff format .`
    # + re-pin here.
    "ruff==0.15.12",
    "mypy>=1.10,<2.0",
    "pyyaml>=6.0,<7.0",
    "types-requests>=2.31",
    "interrogate>=1.7,<2.0",  # KIT-6 docstring-coverage floor-lock gate (Phase 2 final sub-item)
]
# Offline grounding signal scorers for --grounding-signals eval runs.
# torch is NOT listed here because it requires a platform-specific wheel
# (CPU-only vs CUDA). Install torch FIRST, then this group.
# See CONTRIBUTING.md "Grounding signal scorers" for full instructions.
#
# minicheck is PINNED to a known-good commit: the upstream default branch
# drifted to a vLLM/Bespoke-7B rewrite (dropped the `device` kwarg), and an
# unpinned `git+` ref silently re-drifts (window-8.5-findings EV-1). This commit
# keeps the CPU `flan-t5-large` path and was validated end-to-end on 2026-06-23.
# accelerate is required by transformers>=5 for the `device_map="auto"` the
# minicheck Inferencer uses; the transformers cap is widened to <6.0 (validated
# on 5.10.2 — the previous <5.0 cap was already being violated by a fresh install).
eval-grounding = [
    "transformers>=4.40,<6.0",
    "accelerate>=1.0",
    "nltk>=3.9",  # MiniCheck sentence-splits with NLTK; declared directly (grounding_signals ensures punkt_tab)
    "minicheck @ git+https://github.com/Liyan06/MiniCheck.git@b58b9fa69acbd1015ec970fa65dd752413a053d2",
]

[project.urls]
Homepage = "https://github.com/take-tempo-public/sartor"
Repository = "https://github.com/take-tempo-public/sartor"
Issues = "https://github.com/take-tempo-public/sartor/issues"
Changelog = "https://github.com/take-tempo-public/sartor/blob/main/CHANGELOG.md"

[project.scripts]
# `sartor` launches the Flask app on http://localhost:5000 (same as
# `python app.py`). The shim lets `pip install -e .` users run the
# tool without a clone-relative invocation.
sartor = "app:main"

[tool.setuptools]
# F-26 (2026-07 UX review, `docs/dev/reviews/2026-07-ux-review/40-friction-register.md`):
# this list omitted 4 top-level deterministic modules that ARE imported at runtime
# (`corpus_to_json_resume`, `docx_to_persona_html`, `json_resume`, `pdf_render` — every
# `.py` file at the repo root minus `app`/`analyzer`/`config`/`hardening`/`generator`/
# `parser`/`scraper`, which were already listed). An installed wheel was missing them.
py-modules = [
    "app",
    "analyzer",
    "config",
    "corpus_to_json_resume",
    "demo_fixtures",
    "docx_to_persona_html",
    "generator",
    "hardening",
    "json_resume",
    "parser",
    "pdf_render",
    "scraper",
]

[tool.setuptools.packages.find]
# `scripts*` is packaged because it is imported at RUNTIME by installed code:
# `blueprints/diagnostics.py` imports `scripts.export_corpus_seed`, and
# `sartor --setup` runs `python -m scripts.build_vector_index`. Omitting it broke
# both in an installed wheel (they only worked from an editable clone).
#
# `templates`/`static`/`personas.bundled`/`docs.wiki` are PyPI-wheel-ledger additions
# (`docs/dev/RELEASE_CHECKLIST.md` "PyPI wheel not installable"): these directories
# hold read-only data (the Jinja shell, the app's JS/CSS, the 4 bundled persona
# templates, the committed LLM-wiki the assistant reads) with no `.py` files of their
# own — each got a marker `__init__.py` (see those files' own docstrings) purely so
# setuptools can treat them as packages and ship their contents via `package-data`
# below, and so `config._package_dir()` / `blueprints/assistant.py` can resolve them
# by import regardless of install mode. `docs.wiki` is a namespace-rooted subpackage —
# `docs/` itself is NOT packaged (no `docs/__init__.py`), so none of the surrounding
# `docs/` tree (dev docs, reviews, screenshots) ships in the wheel.
include = [
    "blueprints*",
    "dashboard*",
    "db*",
    "docs.wiki",
    "onboarding*",
    "personas.bundled",
    "recall*",
    "scripts*",
    "static",
    "templates",
    "web_infra*",
]

[tool.setuptools.package-data]
# Explicit, narrow globs — NOT a blanket "**/*" — so gitignored/PII sibling content
# never leaks into a build: `personas/robert/` (a real per-user upload dir) sits right
# next to `personas/bundled/` but is excluded by construction (only `personas.bundled`
# is a package; its own glob only reaches its own files).
dashboard = ["templates/*.html"]
templates = ["*.html"]
static = ["*.js", "*.css", "vendor/*.js"]
"personas.bundled" = ["*.css", "*.docx", "*.html"]
"docs.wiki" = [".last_ingest_sha", "*.md", "pages/*.md"]

[tool.ruff]
line-length = 100
target-version = "py310"
# docs-site/ is the Fumadocs (Next.js/TypeScript) app (feat/fumadocs-site) — a
# separate JS toolchain (docs-site/package.json), not Python; ruff has nothing
# to check there. node_modules is already in ruff's own default excludes, but
# this is listed explicitly so the whole tree (content/, src/, etc.) is a
# documented, deliberate exclusion rather than an accident of ruff's defaults.
extend-exclude = ["configs", "resumes", "output", "logs", "evals/results", "evals/fixtures/real", "db/migrations/versions", "docs-site"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    # Kit-adoption Phase 1 final item (KIT-6 / design §4): the SIM + RUF families
    # land whole — "add the family to select, fix the real hits, ignore the noise"
    # (Decision-6 ratchet-then-block). Whole-family select holds future code to the
    # standard too; the documented noise is carved out in `ignore` below.
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    # Kit-adoption Phase 2, first sub-item (KIT-6/KIT-7, design §4 "Strictness ratchet"):
    # the ANN (flake8-annotations) family lands whole across production — "add the family
    # to select, fix the real hits, exempt the Decision-7 set". ANN is unambiguous, so it
    # hard-blocks day one (Decision-6 — not warn→block ratcheted), same as SIM/RUF in
    # Phase 1. The Decision-7 exempt set (tests/ evals/ scripts/ db/migrations) is carved
    # out in per-file-ignores below; production carries no ANN override (the §6 exit shape
    # for this family). ANN401 (any-type) is handled case-by-case at the call site, not by
    # a blanket family ignore.
    "ANN",  # flake8-annotations
    # Kit-adoption Phase 2 #3 (KIT-6 ratchet / KIT-7 end-state, design §4/§6): the D
    # (pydocstyle) family. CONTENT rules (D205/D209/D301/D4xx) block tree-wide day one;
    # the MISSING-DOCSTRING rules (D101/D102/D103/D105/D107) ratchet per-module via the
    # per-file-ignores ratchet block below — that list shrinks as modules are documented
    # until only the KIT-7 exempt set remains (the §6 exit criterion). The google
    # convention (below) narrows D to its subset + silences the D203/D211 + D212/D213
    # conflicts. hardening.py is the first fully-documented module → not in the ratchet.
    "D",    # pydocstyle
]
ignore = [
    "E501",  # line too long — many lines in prompts intentionally long
    "S101",  # use of assert (pytest needs this)
    "B008",  # function call in default arg (Flask convention)
    # SIM/RUF triage noise (Decision-6 "known-noisy heuristic stays ignored"):
    "RUF001",  # ambiguous-unicode in strings — em-dash/smart-quotes in prompt+UI copy, intentional
    "RUF002",  # ambiguous-unicode in docstrings — same
    "RUF003",  # ambiguous-unicode in comments — same
    "SIM905",  # split-static-string — hardening.STOP_WORDS is a deliberately compact space-delimited
               # constant; the fix explodes it into a ~110-element literal (strictly worse)
]

[tool.ruff.lint.per-file-ignores]
# RUF059 (unused unpacked variable) is an idiomatic tuple-unpack in tests
# (`app, run = make_app()` ignoring one half) — a context false-positive, on par
# with the existing S-family test carve-outs below. Production code stays covered.
# ANN (flake8-annotations) is the Decision-7 / KIT-7 strictness-exempt set — test,
# eval, and script scaffolding is not held to the production annotation bar (the
# ratchet's named end-state exempts exactly these four trees; db/migrations/versions
# is already fully extend-excluded above). Production carries no ANN override.
"tests/**" = ["S101", "S104", "S105", "S106", "S108", "S607", "RUF059", "ANN", "D"]
"evals/*" = ["S101", "ANN", "D"]
"scripts/**" = ["ANN", "D"]

# Kit-adoption Phase 2 #3 — D missing-docstring ratchet (KIT-6/§6): COMPLETE.
# Each production module was documented branch-by-branch and dropped from this block;
# the last unit (`ui_pages/**`, the 12-file Playwright POM, 89 symbols) drained on
# `chore/kit-phase2-ruff-d-ui-pages`, emptying the ratchet. The §6 exit criterion for
# the D family is now met: D — including the missing-docstring codes (D101/D102/D103/
# D105/D107) — blocks EVERYWHERE outside the KIT-7 exempt set declared above
# (tests/** · evals/* · scripts/** · db/migrations/versions). No per-module D waiver
# remains; re-introduce one here only if a new module is added that cannot be
# documented in the same branch (it then becomes a tracked ratchet entry again).

[tool.ruff.lint.pydocstyle]
# Kit-adoption Phase 2 #3: pin the google docstring convention. Narrows the D family to
# google's subset and silences the mutually-exclusive D203/D211 + D212/D213 pairs (so D
# never self-conflicts). Required whenever "D" is in select.
convention = "google"

[tool.ruff.format]
# Kit-adoption Phase 1 (KIT-6): declare the adopted formatter style explicitly so the
# `ruff format --check` gate (wired in .claude-plugin/hooks/ruff-changed.sh) is deterministic
# across machines + ruff versions. These match ruff's current defaults — they pin the style,
# they do not change formatter output. `line-ending` is left at the default ("auto", preserve
# each file's existing ending) to avoid CRLF/LF churn on Windows clones.
quote-style = "double"
indent-style = "space"

[tool.interrogate]
# Kit-adoption Phase 2 final sub-item (KIT-6 measured-current / KIT-7 exempt set; design §4/§6).
# Docstring-coverage FLOOR, locked at today's measured production coverage: green now (forces
# no new docstrings — KIT-6 "lock the gain, don't force new work"), blocks only a regression
# below `fail-under`. This is the aggregate-% companion to the ruff-`D` family (which gates
# per-symbol missing docstrings); it catches a module-scale regression that could slip under D's
# per-file ratchet. A bare `python -m interrogate -c pyproject.toml .` reproduces the pytest gate
# (tests/test_docstring_coverage_gate.py re-runs this exact config and asserts exit 0).
# Ratchet up later = raise `fail-under` in a future branch; never lower it. `fail-under` is the
# MEASURED % floored minus a small headroom (NOT an exact float — an exact floor trips on
# incidental symbol churn).
fail-under = 99
# Production-only scope: the KIT-7 exempt set (tests/ evals/ scripts/ db/migrations) excluded,
# plus data/build noise (mirrors [tool.ruff] extend-exclude above). `ui_pages/**` stays IN scope
# to match the surface the ruff-`D` family covers (ratchet unit 8).
exclude = ["tests", "evals", "scripts", "db/migrations", "configs", "resumes", "output", "logs", "build", ".venv", "__pycache__", "setup.py", "docs-site"]
# Coherence with the ruff-`D` google scope: google omits module docstrings (no D100) and does not
# treat magics/privates as public API. `@property` accessors are COUNTED
# (ignore-property-decorators = false) to match the D102 treatment of config.py's derived-root
# properties.
ignore-module = true
ignore-magic = true
ignore-private = true
ignore-semiprivate = true
ignore-nested-functions = true
ignore-overloaded-functions = true
ignore-init-method = true
ignore-property-decorators = false

[tool.mypy]
python_version = "3.10"
# docs-site/ is the Fumadocs (Next.js/TypeScript) app (feat/fumadocs-site) — no
# .py files live there, but its node_modules/ is large and mypy's default file
# discovery would otherwise walk it looking for stray .py/.pyi files. Excluded
# explicitly rather than relying on that walk finding nothing.
exclude = ["^docs-site/"]
# Kit-adoption Phase 1 (KIT-3/§4): the Pydantic mypy plugin teaches mypy the
# analyzer response models' generated __init__/validator signatures. Ships inside
# the existing `pydantic` dep — no new dependency. The legacy SQLAlchemy mypy
# plugin is deliberately NOT enabled: db/models.py uses native 2.0 typing
# (DeclarativeBase + Mapped[...] + mapped_column), for which that plugin is
# deprecated/unneeded. See docs/dev/kit-adoption-design.md §4.
plugins = ["pydantic.mypy"]
strict_optional = true
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["docx", "docx.*", "pdfplumber", "pdfplumber.*", "markdown", "markdown.*", "bs4", "bs4.*"]
ignore_missing_imports = true

# Kit-adoption Phase 2 #2 (KIT-6 ratchet / KIT-7 end-state, kit-adoption-design.md §4/§6):
# the per-module --strict ratchet roster. RATCHET COMPLETE — §6 EXIT REACHED (2026-07-10,
# `chore/kit-mypy-strict-uipages-exit`): every non-exempt production module is now at full
# `mypy --strict` + warn_unreachable, while the global config stays permissive for the
# Decision-7 exempt set. `strict` is NOT a per-module option (mypy.options.PER_MODULE_OPTIONS),
# so the preset is spelled out as its per-module-capable component flags below. Terse cohort
# history (rungs 1-8; full per-rung detail in kit-adoption-design.md §4):
#   - rung 1: scraper/json_resume/pdf_render — the deterministic P1-Hardening leaves (clean).
#   - rung 2: blueprints.applications — first non-leaf route/seam module (ANN pre-typed it).
#   - rung 3: analyzer — the prompt-home module (sha256-proven prompt-byte-identical).
#   - rung 4: hardening/parser/generator/corpus_to_json_resume/docx_to_persona_html/config/
#     demo_fixtures/app — the remaining top-level root modules.
#   - rung 5: web_infra.*/recall.*/onboarding.*/db-minus-versions — the backend substrate
#     (db listed as explicit submodules, never a wildcard, to keep db.migrations.versions.*
#     from being silently swept in by a future db.* wildcard — the db-glob trap, still live
#     now that versions.* IS rostered below via its own explicit glob entry).
#   - rung 6: blueprints.* — the rest of blueprints/** (glob subsumes rung 2's entry).
#   - rung 7: dashboard.* — the localhost-only diagnostics dashboard.
#   - rung 8: ui_pages.* (the Playwright Page-Object-Model — a test *driver*, but not in the
#     Decision-7 exempt set, so strict per Decision-7) + the 4 setuptools data-package marker
#     `__init__.py` files (`templates`, `static`, `personas.bundled`, `docs.wiki` — verified
#     pure-docstring, zero code, already strict-clean; rostered so the §6 exit is literal and
#     caveat-free). Measured 1 error in ui_pages/user_picker.py (`no-any-return` on
#     `options()` -> `cast("list[str]", ...)`, a runtime no-op); the 4 markers added zero
#     errors. This closed the ORIGINAL ratchet: at that point no module carried a strictness
#     override except the then-named exempt set (tests/, evals/, scripts/,
#     db/migrations/versions — Decision 7 as first settled).
#   - rung 9 (2026-07-10, `chore/mypy-strict-tooling`, owner-directed v1.0.9 tooling-slice
#     pull-in): Decision-7 AMENDED — `scripts.*`, `evals.*`, and `db.migrations.versions.*`
#     added below, bringing the "tooling slice" (22 + 44 + 6 = 72 measured
#     `mypy --strict --warn-unreachable` errors, entirely bare-generic `dict`/`list`
#     parametrization, missing param/return annotations, and a handful of `cast(...)`-wrapped
#     `no-any-return`s — no untyped-call cascade) to full strict. `db.migrations.versions.*` is
#     now a real glob entry (not the rung-5 avoidance case) because the alembic mako template
#     (`db/migrations/script.py.mako`) already emits strict-clean scaffolding
#     (`def upgrade() -> None:`, typed `revision`/`down_revision`), so the friction on future
#     autogenerated revisions is negligible; the 6 measured errors were all in HAND-ADDED
#     helpers (untyped `_table_exists(bind)`-style params, one bare `list[dict]` seed-row
#     constant). **The exempt set is now `tests/` ONLY** — see kit-adoption-design.md §6 for
#     the amended Decision-7 record. `tests/` itself stays deliberately permissive (out of
#     scope for this pull-in; a much larger, separately-scoped burn — ~3,252 errors at time of
#     measurement — deferred per owner direction 2026-07-10).
[[tool.mypy.overrides]]
module = [
    "scraper",
    "json_resume",
    "pdf_render",
    "analyzer",
    "hardening",
    "parser",
    "generator",
    "corpus_to_json_resume",
    "docx_to_persona_html",
    "config",
    "demo_fixtures",
    "app",
    "web_infra.*",
    "recall.*",
    "onboarding.*",
    "db",
    "db.ats_roundtrip",
    "db.build_context",
    "db.models",
    "db.persist_run",
    "db.session",
    "db.migrations.env",
    "db.migrations._sqlite_check_constraint",
    "db.migrations.versions.*",
    "blueprints.*",
    "dashboard.*",
    "ui_pages.*",
    "templates",
    "static",
    "personas.bundled",
    "docs.wiki",
    "scripts.*",
    "evals.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true
check_untyped_defs = true
warn_return_any = true
strict_equality = true
extra_checks = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: tests that launch a real headless Chromium (β.3 PDF end-to-end)",
    "ux: Playwright browser-driven UI regression tests (also marked slow; need `python -m playwright install chromium`). Run with `pytest -m ux`.",
    "a11y: axe-core accessibility smoke gate (also marked `ux` + `slow`, so it runs inside `pytest -m ux`; address it alone with `pytest -m a11y`). axe-core is vendored at `tests/ux/a11y/vendor/axe.min.js` — no pip dependency.",
    "show_welcome: UX tests that opt INTO the Sprint-6.5 first-view help auto-modal (default-suppressed for the rest of the suite by the `_help_welcome_default_seen` autouse fixture).",
    "show_tour: UX tests that opt INTO the full KW3 new-user first-run tour (the multi-stop help sequence; default-suppressed for the rest of the suite by the `_help_welcome_default_seen` autouse fixture).",
]
filterwarnings = [
    # pytest-socket emits a UserWarning each time it blocks a network primitive. The
    # egress-allowlist suite (tests/test_egress_allowlist.py) deliberately triggers the block to
    # prove the gate has teeth, so these are expected, not defects. The two observed warnings have
    # distinct messages ("...socket.socket." and "...socket.getaddrinfo."); both — plus the
    # gethostbyname / connect variants — share the prefix below, so this start-anchored message
    # filter covers them all while staying scoped (nothing else starts this way, so no unrelated
    # UserWarning is masked). (Carry-forward ledger: "pytest-socket UserWarning ×2", cleared on 8.0.)
    "ignore:A test tried to use socket.:UserWarning",
]
